<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Food Soufflé</string>
    <string name="login">Log in</string>
    <string name="registerUser">SignUp</string>
    <string name="textUserName">Please enter an Username</string>
    <string name="textEmail">Please enter your email address</string>
    <string name="textPassword">Please enter your password</string>
    <string name="forgotPassword">Did you forget your password?</string>
    <string name="resetPassword">Reset Password</string>
    <string name="slogan">"Eating healthy food is the simplest way to shed excess weight and become healthy and slim forever." \ n (Subodh Gupta)</string>
    <string name="title_activity_menu_navigation">Menu Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Food Soufflé</string>
    <string name="nav_header_subtitle">deyson19@mail.com</string>
    <string name="nav_header_desc">Header</string>
    <string name="mensajeInicio">"The doctor of the future will no longer treat human beings with medicine; he will cure and prevent diseases with nutrition." \n (Thomas Edison)</string>
    <string name="mensaje_compartir">If you liked our application, we invite you to share it with your friends or family. It would be great if you help us reach more people.</string>

    <!-- Aquí van los nombres de cada parte del menú-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Menu</string>
    <string name="menu_available">Menu Available</string>
    <string name="menu_slideshow">Make an order</string>
    <string name="menu_ubicanos">Location</string>
    <string name="menu_contactar">Contact Us</string>
    <string name="menu_compartir">Share App</string>
    <string name="menu_perfil">My Profile</string>



    <string name="datosDelusuario">And Now \n Your Information:</string>
    <string name="userDatesHorizontalView">And now, your information</string>
    <string name="title_activity_maps">Map</string>
    <string name="escribe_tu_mensaje">Please enter your message...</string>
    <string name="enviar">Send Message</string>
    <string name="asunto">Subject</string>
    <string name="cerrar_sesion">Log Out</string>
    <string name="tu_correo">User e-mail:</string>
    <string name="tu_nombre">User name:</string>
    <string name="menu_disponible">This is our catalog.</string>
    <string name="mensajeContactar">To get in touch with us please complete the following form.</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Nombre de las comidas-->
    <string name="menu1" translatable="false">Arroz, Platano maduro frito, carne desmechada, frijoles y Quatro- De 1,75 Litros -</string>
    <string name="menu2" translatable="false">Pizza de Pepperoni Mediana de 8 porciones / Salsa Tomates frescos y Sprite -De 1,75 Litros-</string>
    <string name="menu3" translatable="false">Arroz, carne de cerdo, ensalada de tomate con zanahoria y lechuga. Fuze Tea durazno- De 400 ml -.</string>
    <string name="menu4" translatable="false">Arroz, sanchocho de carne de res y Fuze Tea limón- De 400 ml -</string>
    <string name="menu5" translatable="false">Sandwich: jamón, tomate, queso y Coca-Cola zero- De 1,75 Litros -</string>
    <string name="menu6" translatable="false">Caldo de camarones con mazorca, arepa y aguapanela caliente.</string>
    <string name="menu7" translatable="false">Tacos de carne desmechada, zanahoria y Coca-Cola de 1,5 Litros</string>
    <string name="menu8" translatable="false">Tacos de carne de res picada, lechuga, salsa de tomate y Coca-Cola light- De 1,5 Litros -</string>

    <!--TODO: información del desarrollador-->
    <string name="developer">Developer</string>
    <string name="developerDescription">Hello everyone, my name is Deyson Vente, I am currently a Software Development student and I am the one who has developed this application. For me it is a pleasure to be able to share with you a little of what I have been learning, I am still in the beginner phase and my purpose is to become a professional in this field. \n I have been developing this application thanks to various sources of information and training that I have visited. I have resorted to the use of libraries and plugins that Google provides for its community.</string>
    <string name="developerContact">Contact Me</string>

    <!--TODO:revisamos el estado de la conexion a internet-->
    <string name="conexionError">Please check your internet conexion!</string>

    <!-- TODO:mensajes de error al intenetar registrarse o entrar-->
    <string name="shortPassword">ERROR, please enter a valid password, greater than 5 characters</string>
    <string name="emptyValu">Hey, this field cannot be empty, check the information</string>
    <string name="errorToCreate">ERROR, we could not create this user.\n Try again</string>
    <string name="errorToRegister">ERROR, please try with another username and password</string>
    <string name="errorToFindUser">Sorry, we could not find this user </string>

    <!--TODO:Mensaje de confirmacion antes de salir-->
    <string name="exitMessage">Are you sure you want to exit?</string>
    <string name="exitMessageTitle">Log Out</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="sendApp">Hello, I hope you are well. \n I invite you to download this application to order from home.</string>
    <string name="linkApp">You can download it from this link:</string>
    <string name="notice">Please select the means by which you want to share the application:</string>
    <string name="errorApp">Error when trying to share by this means, please check that you have installed the official application of</string>
    <string name="attentionBeforeToExit">Attention:</string>
    <string name="messageBeforeToExit">What do you want to do?</string>
    <string name="nothing">Nothing</string>
    <string name="awesomeForKeep">Awesome, thanks for staying.</string>
    <string name="backToMenu">Back to Menu</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="value">Value:</string>
    <string name="share_on">Share on:</string>
    <string name="welcome">Welcome:</string>
    <string name="user_name">User Name</string>
    <string name="enter">Enter</string>
    <string name="exitToApp">Exit</string>
    <string name="exitToAppPositive">Yes</string>
</resources>
