<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_comidas"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_menuCompleto"
            android:icon="@drawable/ic_menu_comidas"
            android:title="Menu Completo" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_ordenar"
            android:title="@string/menu_slideshow" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_contactar"
            android:icon="@drawable/ic_menu_contactar"
            android:title="@string/menu_contactar"/>
         <item
            android:id="@+id/nav_ubicar"
            android:icon="@drawable/ic_menu_ubicanos"
            android:title="@string/menu_ubicanos"/>
    </group>
    <item android:title="Compartir">
        <menu>
        <item
            android:id="@+id/nav_compartir"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_compartir"/>
        </menu>
    </item>
</menu>