<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.foodsouffle.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.foodsouffle.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.foodsouffle.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_ubicanos"
        android:name="com.foodsouffle.ui.Ubicanos"
        android:label="@string/menu_ubicanos"
        tools:layout="@layout/ubicanos_fragment" />

    <fragment
        android:id="@+id/nav_contactar"
        android:name="com.foodsouffle.ui.Contactar"
        android:label="@string/menu_contactar"
        tools:layout="@layout/contactar_fragment" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.foodsouffle.ui.MiPerfil"
        android:label="@string/menu_perfil"
        tools:layout="@layout/mi_perfil_fragment"/>

</navigation>