<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/userProfile"
    tools:context=".Perfil">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/usuario"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/datosDelusuario"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/userData"
        android:shadowColor="#090909"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_user"
        android:text="@string/tu_nombre"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_email"
        android:text="@string/tu_correo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" />
    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/colorSalir"/>

</LinearLayout>