<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
              android:background="@color/colorBackgroundForm"
              tools:context=".LoginActivity">


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            app:srcCompat="@drawable/food_souffle"
        tools:ignore="ContentDescription" />

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:errorEnabled="true"
       android:layout_marginTop="10dp">

    <EditText
        android:id="@+id/edtTextMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/textEmail"
        android:importantForAutofill="no" />

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/edtTextPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLogin"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnSendToResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/forgotPassword"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>